package app.algorithms.sorting;

public interface SortAlgorithm {
    public String[] sort(String[] array);
}
